[package]
name = "liberty-exit-node"
version = "0.1.0"
edition = "2024"
description = "Liberty Shield single exit node — UDP tunnel ingress + NAT forwarding"

# Not a member of the root workspace yet; added to workspace members when
# the implementation is ready to build alongside the Android-side crates.

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# TODO: add chacha20poly1305, noise-protocol, or similar when handshake is implemented
