[package]
name = "liberty-exit-node"
version = "0.1.0"
edition = "2024"
description = "Liberty Shield single exit node — UDP tunnel ingress + NAT forwarding"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# constant-time comparison for MAC verification is provided by hmac::Mac::verify_slice
# chacha20poly1305 / noise-protocol deferred to v0.6 Noise XX handshake
